random quote linked with proxy php

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -29,6 +29,7 @@
     &__descr {
       position: relative;
       display: inline-flex;
+      align-items: center;
       gap: .3rem;
 
       .symbol {
