--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,10 +1,14 @@
 #random_quote {
   height: 100%;
   display: flex;
-  align-items: end;
   justify-content: center;
   background-color: #292929;
+  align-items: center;
   // background-image: ;
+
+  &.loaded {
+    align-items: end;
+  }
 
   .quote {
 
@@ -12,6 +16,7 @@
       height: calc(100% - 70px);
       display: flex;
       align-items: center;
+      justify-content: center;
       width: 70%;
     }
     
