created user manage system

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,7 +13,7 @@
         <div class="quote__footer">
           <span>{{randomQuote.author}}</span>
           <div class="quote__footer__btns">
-            <button (click)="addQuoteToFavorite()" class="btn_error">Heart</button>
+            <button (click)="saveAsFavorite()" class="btn_error">Heart</button>
             <button (click)="getQuote()" class="btn_warning">Change</button>
             <button (click)="saveQuote()" class="btn_success">Save</button>
           </div>
