--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -13,7 +13,7 @@
   .quote {
 
     &_wrap {
-      height: calc(100% - 70px);
+      height: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
