--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,1 +1,10 @@
-<p>user works!</p>
+<section id="user_list">
+  <div class="create">
+    <button class="btn_success">Create</button>
+  </div>
+  @if (list.length > 0) {
+    <list></list>
+  } @else {
+    <span class="no_quotes">It seem you don't have any quote saved :/</span>
+  }
+</section>
