--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,9 +13,15 @@
         <div class="quote__footer">
           <span>{{randomQuote.author}}</span>
           <div class="quote__footer__btns">
-            <button (click)="saveAsFavorite()" class="btn_error">Heart</button>
-            <button (click)="getQuote()" class="btn_warning">Change</button>
-            <button (click)="saveQuote()" class="btn_success">Save</button>
+            <button (click)="saveAsFavorite()" class="btn_error">
+              <span class="icon icon-heart"></span>
+            </button>
+            <button (click)="getQuote()" class="btn_warning">
+              <span class="icon icon-reload"></span>
+            </button>
+            <button (click)="saveQuote()" class="btn_success">
+              <span class="icon icon-save-disk"></span>
+            </button>
           </div>
         </div>
       </div>
