added socials icons

--- a/src/styles/icon_variables.scss
+++ b/src/styles/icon_variables.scss
@@ -1,6 +1,9 @@
 $icomoon-font-family: "icomoon" !default;
 $icomoon-font-path: "/fonts" !default;
 
+$icon-facebook: "\ea29";
+$icon-whatsapp: "\ea2a";
+$icon-linkedin: "\ea2b";
 $icon-add-outline: "\e900";
 $icon-add-solid: "\e901";
 $icon-adjust: "\e902";
