--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: '#{$icomoon-font-family}';
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?shz5rq');
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?shz5rq#iefix') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?shz5rq') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?shz5rq') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?shz5rq##{$icomoon-font-family}') format('svg');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?chtiwo');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?chtiwo#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?chtiwo') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?chtiwo') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?chtiwo##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -27,6 +27,21 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-facebook {
+  &:before {
+    content: $icon-facebook; 
+  }
+}
+.icon-whatsapp {
+  &:before {
+    content: $icon-whatsapp; 
+  }
+}
+.icon-linkedin {
+  &:before {
+    content: $icon-linkedin; 
+  }
+}
 .icon-add-outline {
   &:before {
     content: $icon-add-outline; 
