filters created, better style (maybe)

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,13 +13,13 @@
         <div class="quote__footer">
           <span>{{randomQuote.author}}</span>
           <div class="quote__footer__btns">
-            <button (click)="saveAsFavorite()" class="btn_error">
+            <button (click)="saveAsFavorite()" class="ctas">
               <span class="icon icon-heart"></span>
             </button>
-            <button (click)="getQuote()" class="btn_warning">
+            <button (click)="getQuote()" class="ctas">
               <span class="icon icon-reload"></span>
             </button>
-            <button (click)="saveQuote()" class="btn_success">
+            <button (click)="saveQuote()" class="ctas">
               <span class="icon icon-save-disk"></span>
             </button>
           </div>
