--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,4 +1,4 @@
-<section id="user_list">
+<section id="user_list" class="container">
   <div class="create">
     <button class="btn_success">Create</button>
   </div>
