--- a/src/app/ui/list/list.component.html
+++ b/src/app/ui/list/list.component.html
@@ -1,6 +1,6 @@
 <section id="list">
   <div class="filters">
-    filtri
+    <filters [originalList]="resortList()"></filters>
   </div>
 
   <div class="quotes">
