--- a/src/app/ui/quote-card/quote-card.component.scss
+++ b/src/app/ui/quote-card/quote-card.component.scss
@@ -3,6 +3,7 @@
   box-shadow: 0px 0px 6px 2px #EBEBEB;
   padding: 1rem;
   border-radius: .7rem;
+  background-color: white;
 
   hr {
     margin: 1rem 0;
@@ -20,14 +21,18 @@
       .fav {
 
         &.is-fav {
-          color: red;
+          .icon {
+            color: red;
+          }
         }
       }
 
       .pin {
 
         &.is-pin {
-          color: green;
+          .icon {
+            color: green;
+          }
         }
       }
     }
@@ -38,7 +43,9 @@
 
       .share {
         &.open {
-          color: blue;
+          .icon {
+            color: blue;
+          }
         }
   
       }
@@ -59,6 +66,7 @@
   .descr {
     text-align: center;
     font-size: 1.2rem;
+    color: 	#1A1A1A;
   }
 
   .footer {
@@ -66,6 +74,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    color: 	#666666;
 
     .feat {
       display: inherit;
