--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,14 @@ $success_color: rgb(40, 95, 40);
 $error_color: rgb(107, 37, 37);
 $warning_color: rgb(134, 136, 27);
 
+$primary_color: #4e4e4e;
+$gold: #C7A740;
+
+:root {
+  --primary-color: #4e4e4e;
+  --gold: #C7A740;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -23,6 +31,11 @@ html {
 
 body {
   height: 100vh;
+  background-color: #FAF9F6;
+}
+
+p {
+  margin: unset;
 }
 
 button {
@@ -31,6 +44,25 @@ button {
   border: none;
   background: none;
   cursor: pointer;
+}
+
+input {
+  outline: none;
+  border: none;
+}
+
+.bg_primary {
+  background-color: $primary_color;
+  color: $gold;
+}
+
+.icon {
+  color: $gold;
+}
+
+.ctas {
+  background-color: #4e4e4e;
+  padding: .5rem;
 }
 
 .italic {
@@ -79,4 +111,4 @@ button {
     transform: scale(1);
     opacity: 0;
   }
-} 
+}
