added twitter social as share option

--- a/src/styles/icon_variables.scss
+++ b/src/styles/icon_variables.scss
@@ -1,6 +1,7 @@
 $icomoon-font-family: "icomoon" !default;
 $icomoon-font-path: "/fonts" !default;
 
+$icon-x: "\ea2c";
 $icon-facebook: "\ea29";
 $icon-whatsapp: "\ea2a";
 $icon-linkedin: "\ea2b";
