--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,26 +4,30 @@
   } @else {
     <div class="quote_wrap">
       <div class="quote_content">
-        <div class="quote__descr italic">
-          <span class="symbol"> " </span>
-          <p>{{randomQuote.description}}</p>
-          <span class="symbol"> " </span>
-        </div>
-        <hr>
-        <div class="quote__footer">
-          <span>{{randomQuote.author}}</span>
-          <div class="quote__footer__btns">
-            <button (click)="saveAsFavorite()" class="ctas">
-              <span class="icon icon-heart"></span>
-            </button>
-            <button (click)="getQuote()" class="ctas">
-              <span class="icon icon-reload"></span>
-            </button>
-            <button (click)="saveQuote()" class="ctas">
-              <span class="icon icon-save-disk"></span>
-            </button>
+        @if(!randomQuote) {
+          {{errorMessage}}
+        } @else {
+          <div class="quote__descr italic">
+            <span class="symbol"> " </span>
+            <p>{{randomQuote.description}}</p>
+            <span class="symbol"> " </span>
           </div>
-        </div>
+          <hr>
+          <div class="quote__footer">
+            <span>{{randomQuote.author}}</span>
+            <div class="quote__footer__btns">
+              <button (click)="saveAsFavorite()" class="ctas">
+                <span class="icon icon-heart"></span>
+              </button>
+              <button (click)="getQuote()" class="ctas">
+                <span class="icon icon-reload"></span>
+              </button>
+              <button (click)="saveQuote()" class="ctas">
+                <span class="icon icon-save-disk"></span>
+              </button>
+            </div>
+          </div>
+        }
       </div>
     </div>
   }
