--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,7 @@ html {
 body {
   height: 100vh;
   background-color: #FAF9F6;
+  color: $primary_color;
 }
 
 p {
@@ -49,6 +50,17 @@ button {
 input {
   outline: none;
   border: none;
+}
+
+.pill {
+  border: 1px $gold solid;
+  border-radius: .4rem;
+  padding: .3rem .4rem;
+
+  &.full {
+    background-color: $gold;
+    color: $primary_color;
+  }
 }
 
 .bg_primary {
