--- a/src/app/ui/filters/filters.component.scss
+++ b/src/app/ui/filters/filters.component.scss
@@ -3,6 +3,7 @@
     border-bottom-left-radius: .5rem;
     border-bottom-right-radius: .5rem;
     padding: .6rem 1.1rem;
+    height: 100%;
 
     &.open {
       .filters_actual {
@@ -73,8 +74,23 @@
   }
 }
 
+@media(min-width: 1100px) {
+  .filters {
+    &_wrap {
+      &.open {
+        .filters_actual {
+          margin-top: 1rem;
+          gap: 1rem;
+          
+          .items {
+            font-size: 1rem;
 
-.accordion {
-  border-radius: 0;
-  background-color: transparent;
+            .accordion_content {
+              font-size: .8rem;
+            }
+          }
+        }
+      }
+    }
+  }
 }
