--- a/src/app/ui/list/list.component.scss
+++ b/src/app/ui/list/list.component.scss
@@ -1,12 +1,56 @@
 #list {
+  width: 95%;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+
+  .filters {
+    cursor: pointer;
+    user-select: none;
+  }
 
   .quotes {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
     margin: 0 1rem;
+  }
+}
+
+@media(min-width: 500px) {
+  #list {
+    width: 85%;
+  }
+}
+
+@media(min-width: 1100px) {
+  #list {
+    width: 95%;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-areas: 
+      "filters quotes"
+      "filters quotes"
+      "filters quotes"
+    ;
+    .filters {
+      grid-area: filters;
+    }
+
+    .quotes {
+      grid-area: quotes;
+      width: 85%;
+      margin: 1rem auto;
+    }
+  }
+}
+
+@media(min-width: 1400px) {
+  #list {
+    width: 85%;
+    .quotes {
+      width: 70%;
+    }
   }
 }
