--- a/src/app/ui/filters/filters.component.scss
+++ b/src/app/ui/filters/filters.component.scss
@@ -3,7 +3,7 @@
     border-bottom-left-radius: .5rem;
     border-bottom-right-radius: .5rem;
     padding: .6rem 1.1rem;
-    height: 100%;
+    height: 90%;
 
     &.open {
       .filters_actual {
@@ -77,6 +77,8 @@
 @media(min-width: 1100px) {
   .filters {
     &_wrap {
+      border-bottom-left-radius: 1rem;
+      border-bottom-right-radius: 1rem;
       &.open {
         .filters_actual {
           margin-top: 1rem;
@@ -91,6 +93,10 @@
           }
         }
       }
+    }
+
+    &_head {
+      pointer-events: none;
     }
   }
 }
