--- a/src/app/ui/list/list.component.html
+++ b/src/app/ui/list/list.component.html
@@ -5,7 +5,7 @@
 
   <div class="quotes">
     @if(resortList().length > 0) {
-      <span>Showing {{ resortList().length }} item{{ resortList().length === 1 ? '' : 's' }}</span>
+      <span>Showing {{ resortList().length }} quote{{ resortList().length === 1 ? '' : 's' }}</span>
       @for (quote of resortList(); track $index) {
         <quote-card [quote]="quote"></quote-card>
       }
