adapted home page with user page, created components for random quote and create new quote

--- a/src/app/ui/filters/filters.component.html
+++ b/src/app/ui/filters/filters.component.html
@@ -1,5 +1,5 @@
 <div class="filters_wrap bg_primary" [class.open]="showFilters">
-  <div (click)="openFilters()" class="filters_head">
+  <div (click)="openFilters()" class="filters_head color_gold">
     <span class="icon icon-filter"></span>
     <span>Filter by ...</span>
   </div>
