--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,88 +1,14 @@
-#random_quote {
-  height: 100%;
+#hero {
   display: flex;
-  justify-content: center;
-  background-color: #292929;
-  align-items: center;
-  // background-image: ;
+  flex-direction: column;
+  border-radius: 1rem;
+  height: calc(100vh - 2rem);
+  margin: 1rem;
 
-  &.loaded {
-    align-items: end;
+  .ctas_btns {
+    height: 30%;
+    margin: 0 auto;
   }
 
-  .quote {
-
-    &_wrap {
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 70%;
-    }
-    
-    &_content {
-      border-radius: .5rem;
-      padding: .5rem;
-      background-color: rgba($color: #ffffff, $alpha: .7);
-      -webkit-box-shadow: 0px 0px 7px 1px #FFFFFF; 
-      box-shadow: 0px 0px 7px 1px #FFFFFF;
-      hr {
-        margin: .6rem 0;
-      }
-    }
-
-    &__descr {
-      position: relative;
-      display: inline-flex;
-      align-items: center;
-      gap: .3rem;
-
-      .symbol {
-        font-size: 2rem;
-
-        &:first-child {
-          padding-right: .3rem;
-        }
-
-        &:last-child {
-          align-self: end;
-          padding-left: .3rem;
-          padding-right: .4rem;
-        }
-      }
-
-    }
-
-    &__footer {
-      width: 100%;
-      display: inline-flex;
-      align-items: center;
-      justify-content: space-between;
-
-      &__btns {
-        display: inline-flex;
-        gap: .5rem;
-
-        span {
-          font-weight: 500;
-        }
-      }
-    }
-  }
-}
-
-@media (min-width: 1400px) {
-  #random_quote {
-    .quote {
-      &_wrap {
-        width: 40%;
-      }
-      &_content {
-        padding: .8rem;
-        hr {
-          margin: .6rem 0;
-        }
-      }
-    }
-  }
+  random-quote { height: 70%; }
 }
