--- a/src/app/ui/filters/filters.component.scss
+++ b/src/app/ui/filters/filters.component.scss
@@ -1,7 +1,6 @@
 .filters {
   &_wrap {
-    border-bottom-left-radius: .5rem;
-    border-bottom-right-radius: .5rem;
+    border-radius: .5rem;
     padding: .6rem 1.1rem;
     height: 90%;
 
