--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -8,7 +8,27 @@
   .ctas_btns {
     height: 30%;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   random-quote { height: 70%; }
+}
+
+@media(min-width: 1100px) {
+  #hero {
+    flex-direction: row-reverse;
+
+    .ctas_btns {
+      height: 100%;
+      width: 40%;
+      border-right: 3px var(--gold) solid;
+    }
+
+    random-quote {
+      height: 100%;
+      width: 60%;
+    }
+  }
 }
