--- a/src/app/ui/list/list.component.html
+++ b/src/app/ui/list/list.component.html
@@ -5,7 +5,13 @@
 
   <div class="quotes">
     @if(resortList().length > 0) {
-      <span>Showing {{ resortList().length }} quote{{ resortList().length === 1 ? '' : 's' }}</span>
+      <div class="stats">
+        <span>Showing {{ resortList().length }} quote{{ resortList().length === 1 ? '' : 's' }}</span>
+        <button class="btn_error">
+          <span class="icon icon-trash"></span>
+          <span>Delete All</span>
+        </button>
+      </div>  
       @for (quote of resortList(); track $index) {
         <quote-card [quote]="quote"></quote-card>
       }
