--- a/src/app/ui/list/list.component.scss
+++ b/src/app/ui/list/list.component.scss
@@ -14,6 +14,20 @@
     flex-direction: column;
     gap: 1.5rem;
     margin: 0 1rem;
+
+    .stats {
+      display: inherit;
+      align-items: center;
+      justify-content: space-between;
+
+      .btn_error {
+        span {
+          &:first-child {
+            margin-right: .3rem;
+          }
+        }
+      }
+    }
   }
 }
 
