--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,19 +1,32 @@
 #hero {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   border-radius: 1rem;
   height: calc(100vh - 2rem);
   margin: 1rem;
 
-  .ctas_btns {
-    height: 30%;
-    margin: 0 auto;
+  ctas {
+    height: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
   }
+}
 
-  random-quote { height: 70%; }
+#user_list {
+  height: 100%;
+
+  list {
+    display: flex;
+    justify-content: center;
+  }
+
+  .no_quotes {
+    display: block;
+    text-align: center;
+    margin: 3rem 0;
+  }
 }
 
 @media(min-width: 1100px) {
