--- a/src/app/ui/quote-card/quote-card.component.scss
+++ b/src/app/ui/quote-card/quote-card.component.scss
@@ -67,26 +67,59 @@
     text-align: center;
     font-size: 1.2rem;
     color: 	#1A1A1A;
+
+    textarea {
+      background-color: #EBEBEB;
+      margin: 1rem 0;
+      padding: .5rem;
+      width: 100%;
+      height: 80px;
+      resize: none;
+      border: .1rem var(--primary-color) solid;
+      border-radius: .5rem;
+      &:focus {
+        outline: none;
+      }
+    }
   }
 
   .footer {
     display: inline-flex;
     align-items: center;
     justify-content: space-between;
+    gap: .8rem;
     width: 100%;
     color: 	#666666;
 
+    .edit_author {
+      padding: .3rem 0;
+      border-bottom: 1px var(--primary-color) solid;
+      color: var(--primary-color);
+      width: 45%;
+    }
+
     .feat {
       display: inherit;
+      align-items: center;
       gap: .7rem;
       font-size: .8rem;
 
       &__time {
+        white-space: nowrap;
         display: inherit;
         align-items: center;
         font-weight: 300;
         gap: .4rem;
+
+        &.disable {
+          font-weight: 400;
+        }
       }
     }
   }
+}
+
+.disable {
+  pointer-events: none;
+  opacity: .5;
 }
