--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -33,7 +33,7 @@
   #hero {
     flex-direction: row-reverse;
 
-    .ctas_btns {
+    ctas {
       height: 100%;
       width: 40%;
       border-right: 3px var(--gold) solid;
