--- a/src/app/ui/list/list.component.html
+++ b/src/app/ui/list/list.component.html
@@ -7,12 +7,15 @@
     @if(resortList().length > 0) {
       <div class="stats">
         <span>Showing {{ resortList().length }} quote{{ resortList().length === 1 ? '' : 's' }}</span>
-        <button class="btn_error">
-          <span class="icon icon-trash"></span>
-          <span>Delete All</span>
-        </button>
+
+        @if(resortList().length > 1) {
+          <button (click)="deleteAllQuotes()" class="btn_error">
+            <span class="icon icon-trash"></span>
+            <span>Delete All</span>
+          </button>
+        }
       </div>  
-      @for (quote of resortList(); track $index) {
+      @for (quote of resortList(); track quote.id) {
         <quote-card [quote]="quote"></quote-card>
       }
     } @else {
