--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -2,15 +2,19 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  border-radius: 1rem;
+  border-top-right-radius: 10rem;
+  border-bottom-left-radius: 10rem;
+  border-top-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
   height: calc(100vh - 2rem);
   margin: 1rem;
 
   ctas {
-    height: 50%;
+    height: 35%;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-top: 3px var(--gold) solid;
   }
 }
 
@@ -28,9 +32,19 @@
   }
 }
 
+@media(min-width: 550px) {
+  #hero {
+    ctas {
+      border-top: unset;
+    }
+  }
+}
+
 @media(min-width: 1100px) {
   #hero {
     flex-direction: row-reverse;
+    border-top-right-radius: 10rem;
+    border-bottom-left-radius: 10rem;
 
     ctas {
       height: 100%;
