--- a/src/app/ui/ctas/ctas.component.scss
+++ b/src/app/ui/ctas/ctas.component.scss
@@ -1,4 +1,5 @@
 #ctas {
+  margin-top: 6rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,6 +24,7 @@
 
 @media(min-width: 550px) {
   #ctas {
+    margin-top: unset;
     flex-direction: row;
   }
 }
