added imgs for hero home and hero explore + fix some style

--- a/src/app/pages/explore/explore.component.html
+++ b/src/app/pages/explore/explore.component.html
@@ -1,1 +1,7 @@
-<p>explore works!</p>
+<section id="explore">
+  <h2 class="italic">Find everything could inspires you</h2>
+</section>
+
+<section id="explore_list">
+  <list></list>
+</section>
