--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,20 +1,30 @@
 #hero {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   border-top-right-radius: 10rem;
   border-bottom-left-radius: 10rem;
   border-top-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
   height: calc(100vh - 2rem);
   margin: 1rem;
+  padding-bottom: 1.7rem;
+  
+  random-quote {
+    border-top-right-radius: 10rem;
+    border-top-left-radius: 1rem;
+    height: 50%;
+    background-image: url('/imgs/user_list.webp');
+    background-position: center;
+    background-size: cover;
+    border-bottom: 3px var(--gold) solid;
+  }
 
   ctas {
-    height: 35%;
+    height: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-top: 3px var(--gold) solid;
   }
 }
 
@@ -34,9 +44,9 @@
 
 @media(min-width: 550px) {
   #hero {
-    ctas {
-      border-top: unset;
-    }
+    random-quote { height: 40%; }
+
+    ctas { border-top: unset; }
   }
 }
 
@@ -45,14 +55,19 @@
     flex-direction: row-reverse;
     border-top-right-radius: 10rem;
     border-bottom-left-radius: 10rem;
+    padding-bottom: unset;
 
     ctas {
       height: 100%;
       width: 40%;
-      border-right: 3px var(--gold) solid;
     }
-
+    
     random-quote {
+      border-left: 3px var(--gold) solid;
+      border-bottom: unset;
+      border-top-left-radius: unset;
+      border-top-right-radius: 9.2rem;
+      border-bottom-right-radius: .8rem;
       height: 100%;
       width: 60%;
     }
