added edit saving, explore list implementation + config.php

--- a/src/app/pages/explore/explore.component.html
+++ b/src/app/pages/explore/explore.component.html
@@ -3,5 +3,15 @@
 </section>
 
 <section id="explore_list">
-  <list></list>
+  @if (quotesService.quotes().length > 0) {
+    <list></list>
+  } @else {
+    <div class="no_response">
+      <a routerLink="/" class="pill full">
+        <span class="icon icon-bookmarkcopy2"></span>
+        <span>Go back</span>
+      </a>
+      <span class="no_quotes">No quotes founded!</span>
+    </div>
+  }
 </section>
