--- a/src/app/pages/explore/explore.component.scss
+++ b/src/app/pages/explore/explore.component.scss
@@ -10,9 +10,30 @@
   align-items: center;
   justify-content: center;
   border: 1px var(--primary-color) solid;
-
+  
   h2 {
+    text-align: center;
     font-size: 2rem;
+  }
+}
+
+#explore_list {
+  padding: 3rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  .no_response {
+    display: inline-flex;
+    align-items: center;
+    gap: 1rem;
+
+    .pill {
+      display: inherit;
+      align-items: center;
+      gap: .4rem;
+    }
   }
 }
 
