separated user and explore list in service quotes

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -11,8 +11,8 @@
   padding-bottom: 1.7rem;
   
   random-quote {
-    border-top-right-radius: 10rem;
-    border-top-left-radius: 1rem;
+    border-top-right-radius: 9.2rem;
+    border-top-left-radius: .85rem;
     height: 50%;
     background-image: url('/imgs/user_list.webp');
     background-position: center;
